--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,46 @@
 <!doctype html>
 <html>
     <head>
-        <title>Votey McVoteface</title>
+        <title>Votey McVoteFace</title>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
         <link rel="stylesheet" href="/styles.css" />
     </head>
-    <body>
-        <div class="wrapper">
-          <h1>Votey McVoteface</h1>
-
-            <div>
-                <a class="button" href="/login">
-                  <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
-                <p>Powered by <a href="https://botkit.ai/">Botkit</a></p>
+    <body class="d-flex flex-column h-100">
+        <div class="container">
+          <div class="jumbotron">
+            <h1 class="display-3">Votey McVoteFace</h1>
+            <div class="row">
+              <div class="col">
+                  <p>
+                    VoteyMcVoteFace is a chatbot that runs "Hot or Not" style polls to figure out which images, amongst a given set, are the most popular.
+                  </p>
+                  <p>
+                  <a class="button" href="/login">
+                    <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
+                    </a>
+                  </p>
+              </div>
+              <div class="col">
+                <img src="/votey-icon-2000.png" alt="VoteyMcVoteFace" class="logo" />
+              </div>
             </div>
+          </div>
+        </div>
+        <div class="footer mt-auto py-3">
+          <div class="container">
+            <ul class="nav">
+              <li class="nav-item">
+                <a class="nav-link disabled" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="privacy.html">Privacy</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="support.html">Support</a>
+              </li>
+            </ul>
+          </div>
         </div>
     </body>
 </html>
