Changed Votey McVoteFace to Votey McVoteface

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Votey McVoteFace</title>
+        <title>Votey McVoteface</title>
         <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
         <link rel="stylesheet" href="/styles.css" />
@@ -9,11 +9,11 @@
     <body class="d-flex flex-column h-100">
         <div class="container">
           <div class="jumbotron">
-            <h1 class="display-3">Votey McVoteFace</h1>
+            <h1 class="display-3">Votey McVoteface</h1>
             <div class="row">
               <div class="col">
                   <p>
-                    VoteyMcVoteFace is a chatbot that runs "Hot or Not" style polls to figure out which images, amongst a given set, are the most popular.
+                    Votey McVoteface is a chatbot that runs "Hot or Not" style polls to figure out which images, amongst a given set, are the most popular.
                   </p>
                   <p>
                   <a class="button" href="/login">
@@ -22,7 +22,7 @@
                   </p>
               </div>
               <div class="col">
-                <img src="/votey-icon-2000.png" alt="VoteyMcVoteFace" class="logo" />
+                <img src="/votey-icon-2000.png" alt="Votey McVoteface" class="logo" />
               </div>
             </div>
           </div>
