--- a/public/privacy.html
+++ b/public/privacy.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Privacy Policy: Votey McVoteFace</title>
+        <title>Privacy Policy: Votey McVoteface</title>
         <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
         <link rel="stylesheet" href="/styles.css" />
@@ -15,13 +15,13 @@
               <div class="col">
                   <h3>What We Collect</h3>
                   <p>
-                    VoteyMcVoteFace collects information that is sent directly to it, via direct message or when the bot is directly mentioned or in a channel.
+                    Votey McVoteface collects information that is sent directly to it, via direct message or when the bot is directly mentioned or in a channel.
                   </p>
                   <p>
-                    VoteyMcVoteFace also collects Slack account and access information from users for the purposes of connecting to the Slack API and to authenticate access to information on the VoteyMcVoteFace website.
+                    Votey McVoteface also collects Slack account and access information from users for the purposes of connecting to the Slack API and to authenticate access to information on the Votey McVoteface website.
                   </p>
                   <p>
-                    Using standard web analytics and web server technologies, VoteyMcVoteFace logs your navigation actions, IP address, cookies and other information provided by your web browser.
+                    Using standard web analytics and web server technologies, Votey McVoteface logs your navigation actions, IP address, cookies and other information provided by your web browser.
                   </p>
                   <h3>How We Use Your Data</h3>
                   <p>
