--- a/public/support.html
+++ b/public/support.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Support: Votey McVoteFace</title>
+        <title>Support: Votey McVoteface</title>
         <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
         <link rel="stylesheet" href="/styles.css" />
