Some more updates.

--- a/public/login_error.html
+++ b/public/login_error.html
@@ -2,15 +2,32 @@
 <html>
     <head>
         <title>Error: Votey McVoteface</title>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
         <link rel="stylesheet" href="/styles.css" />
     </head>
-    <body>
-        <div class="wrapper">
-            <div>
-                <h1>Oops! Something went awry during your login.</h1>
-
-                <p><a href="/login">Login again</a></p>
-            </div>
+    <body class="d-flex flex-column h-100">
+      <div class="container">
+        <div class="jumbotron">
+              <h1>Oops! Something went awry during your login.</h1>
+              <hr />
+              <p><a href="/login">Try installing again.</a></p>
         </div>
-    </body>
+      </div>
+      <div class="footer mt-auto py-3">
+        <div class="container">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="privacy.html">Privacy</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="support.html">Support</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+  </body>
 </html>
